# openaria

./: .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependency-review.yml  pr-dependency-review.yml  release.yml  sast.yml
cookbook/: README.md
cookbook/agno-openrouter-reference-architecture/: README.md  demo_service.py  run_agent.py
cookbook/agno-openrouter-reference-architecture/knowledge/playbooks/: schema_mismatch_in_dataframe.md
cookbook/agno-openrouter-reference-architecture/knowledge/runbooks/: schema-drift-investigation.md
cookbook/data-pipeline-investigation/lumis/: lumis.yml  rules.yml
cookbook/evidence-json-reporting/: README.md
cookbook/evidence-json-reporting/evidence/: schema-diff.json
cookbook/evidence-json-reporting/lumis/: lumis.yml  schema-change.yml
cookbook/guarded-proposal/: demo.py
cookbook/ml-regression-monitoring/lumis/: lumis.yml  rules.yml
cookbook/plugin-package/: README.md  lumis-plugin.json  pyproject.toml  test_contract.py
cookbook/plugin-package/src/lumis_fixture_plugin/: __init__.py
cookbook/postgres-memory/: Dockerfile  README.md  compose.yml  demo.py  lumis.yml
cookbook/prometheus-alertmanager/: README.md  alertmanager.json  demo.py  rule.yml
cookbook/simple-log-diagnosis/lumis/: lumis.yml  rules.yml
cookbook/software-delivery-ci-investigation/lumis/: lumis.yml  rules.yml
cookbook/structured-rule-evaluation/: README.md  schema-change.json  schema-change.yml
cookbook/verification-replay/: demo.py
cookbook/webhook-http-evidence/: README.md  demo.py  evidence-response.json  lumis.yml  webhook.json
docs/: LUMIS_SDK_REFERENCE.md  OPENARIA_CORE_REFERENCE.md  README.md  configuration.md  framework-and-cookbooks.md  releasing.md
docs/adoption/: phase-1-standalone-paths.md
docs/architecture/: open-source-project-guide.md  overview.md
docs/concepts/: core-concepts.md
docs/contributing/: maintainer-runbook.md
docs/migrations/: config-v1.md
docs/performance/: phase-1-baseline.md
docs/plugins/: compatibility.md
docs/python-api/: connectors.md  evidence-and-json-reports.md  memory.md  plugins.md  policy-verification-learning.md  structured-rules.md
docs/releases/: 0.0.2.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  0.0.7.md  0.0.8.md  0.1.0-phase-1-release-guide.md  0.1.0rc1-benchmarks.json  0.1.0rc1-evidence.md  0.1.0rc1.md
docs/releases/fixtures/0.0.8-v1alpha1/: lumis.yml  rules.yml
docs/rfcs/: 0001-plugin-sdk.md  0002-postgresql-memory.md  0003-policy-verification-learning.md
docs/roadmap/: candidate-capability-mapping.md  phase-1-trustworthy-python-foundation.md  phase-2-model-prompt-and-bounded-agents.md  phase-3-intelligence-memory-and-integrations.md  phase-4-guarded-recovery-and-ecosystem.md
docs/safety/: security-review.md  threat-model.md
docs/stability/: compatibility.md  public-api.md
docs/tutorials/: phase-1-video-script.md
schemas/: lumis-action-proposal-v1alpha1.schema.json  lumis-diagnosis-report-v1.schema.json  lumis-diagnosis-report-v1alpha1.schema.json  lumis-diagnosis-rule-v1.schema.json  lumis-diagnosis-rule-v1alpha1.schema.json  lumis-playbook-v1.schema.json  lumis-playbook-v1alpha1.schema.json  lumis-plugin-manifest-v1.schema.json  lumis-plugin-manifest-v1alpha1.schema.json  lumis-policy-v1.schema.json  lumis-policy-v1alpha1.schema.json  lumis-project-v1.schema.json  lumis-project-v1alpha1.schema.json  lumis-rules-v1.schema.json
scripts/: check_dependency_licenses.py  generate_config_schema.py  run_phase1_benchmarks.py  verify_published_package.sh  verify_release_artifacts.py
src/lumis_sdk/: __init__.py  evaluation.py
src/lumis_sdk/adapters/deterministic/: __init__.py  structured.py
src/lumis_sdk/adapters/evidence/: __init__.py  local_json.py
src/lumis_sdk/adapters/incidents/: __init__.py  webhook.py
src/lumis_sdk/adapters/memory/: __init__.py  ranking.py
src/lumis_sdk/adapters/plugins/: __init__.py  importlib_catalog.py
src/lumis_sdk/adapters/reports/: __init__.py  json_report.py  markdown.py
src/lumis_sdk/adapters/sqlite/: __init__.py  memory.py
src/lumis_sdk/application/: __init__.py  evidence.py  proposals.py  verification.py
src/lumis_sdk/cli/: app.py
src/lumis_sdk/config/: __init__.py  loader.py  migration.py  models.py
src/lumis_sdk/domain/: __init__.py  evidence.py  models.py  plugins.py  policy.py  reports.py  verification.py
src/lumis_sdk/ports/: __init__.py  evidence.py  memory.py  plugins.py  reporting.py
src/lumis_sdk/testkit/: __init__.py  contracts.py  fakes.py  fixtures.py  plugins.py
src/openaria/lifecycle/: __init__.py  contracts.py  models.py  orchestrator.py  synthetic.py
src/openaria/llm/: __init__.py  redaction.py
tests/: test_cli.py  test_config.py  test_cookbook_configuration.py  test_cookbook_smoke.py  test_dependency_licenses.py  test_evidence.py  test_json_reports.py  test_lifecycle.py  test_llm_boundary.py  test_memory.py  test_phase1_benchmarks.py  test_plugins.py  test_policy_proposals.py  test_policy_verification_cookbooks.py  test_structured_rules.py  test_verification_learning.py  test_versioned_config.py  test_webhook.py
