[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "openaria"
version = "0.1.0"
description = "Vendor-agnostic Diagnosis-as-Code for data, ML, and software delivery pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Solomon Eshun", email = "solomoneshun373@gmail.com" }]
keywords = ["aiops", "diagnosis-as-code", "incident-management", "mlops", "observability", "pipeline-reliability"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "typer>=0.15,<1",
]

[project.urls]
Homepage = "https://github.com/soloshun/openaria"
Documentation = "https://github.com/soloshun/openaria/blob/main/docs/OPENARIA_CORE_REFERENCE.md"
Repository = "https://github.com/soloshun/openaria"
Issues = "https://github.com/soloshun/openaria/issues"

[project.scripts]
openaria = "openaria.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-pyyaml>=6.0.12,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openaria"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
strict = true
warn_unreachable = true
