[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "lumis-sdk"
version = "0.1.0rc1"
description = "Vendor-agnostic, deterministic-first SDK for guarded incident recovery and response."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Solomon Eshun", email = "solomoneshun373@gmail.com" }]
keywords = ["aiops", "diagnosis-as-code", "healing-as-code", "incident-management", "mlops", "observability", "pipeline-reliability"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "typer>=0.15,<1",
]

[project.urls]
Homepage = "https://github.com/soloshun/lumis-sdk"
Documentation = "https://github.com/soloshun/lumis-sdk/blob/main/docs/LUMIS_SDK_REFERENCE.md"
Repository = "https://github.com/soloshun/lumis-sdk"
Issues = "https://github.com/soloshun/lumis-sdk/issues"

[project.scripts]
lumis = "lumis_sdk.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "mypy>=1.14,<3",
  "pytest>=9.0.3,<10",
  "ruff>=0.9,<1",
  "types-pyyaml>=6.0.12,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lumis_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/GOVERNANCE.md",
  "/LICENSE",
  "/README.md",
  "/ROADMAP.md",
  "/SECURITY.md",
  "/SUPPORT.md",
  "/docs",
  "/pyproject.toml",
  "/schemas",
  "/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
strict = true
warn_unreachable = true
