[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "lumis-sdk-fixture-plugin"
version = "1.0.0"
description = "Synthetic independently packaged Lumis SDK plugin fixture."
requires-python = ">=3.11"
dependencies = ["lumis-sdk>=0.0.4,<0.1.0"]

[project.entry-points."lumis_sdk.plugins"]
fixture = "lumis_fixture_plugin:create_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/lumis_fixture_plugin"]

[tool.hatch.build.targets.wheel.force-include]
"lumis-plugin.json" = "lumis-plugin.json"
